--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,10 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# Vivado projects
+*.log
+*.jou
+project*
+test*
+audio_sampler_*
