Reorganized the cores into subsystems

--- a/cfg/zybo_sampler.cfg
+++ b/cfg/zybo_sampler.cfg
@@ -6,8 +6,8 @@ set project_name  "zybo_sampler"
 set project_root [pwd]
 
 ## Project cores to be packaged
-set project_cores [list ${project_root}/source/rtl/codec_unit \
-                        ${project_root}/source/rtl/sampler_dma_unit
+set project_cores [list ${project_root}/subsystems/codec_unit \
+                        ${project_root}/subsystems/sampler_dma_unit
                         ]
 
 ## Project integration script
