Moved Common RTL

--- a/cfg/zybo_sampler.cfg
+++ b/cfg/zybo_sampler.cfg
@@ -6,7 +6,8 @@ set project_name  "zybo_sampler"
 set project_root [pwd]
 
 ## Project cores to be packaged
-set project_cores [list ${project_root}/subsystems/codec_unit \
+set project_cores [list ${project_root}/source/rtl/common           \
+                        ${project_root}/subsystems/codec_unit       \
                         ${project_root}/subsystems/sampler_dma_unit
                         ]
 
