--- a/cfg/zybo_sampler.cfg
+++ b/cfg/zybo_sampler.cfg
@@ -6,9 +6,10 @@ set project_name  "zybo_sampler"
 set project_root [pwd]
 
 ## Project cores to be packaged
-set project_cores [list ${project_root}/source/rtl/common           \
-                        ${project_root}/subsystems/codec_unit       \
-                        ${project_root}/subsystems/sampler_dma_unit
+set project_cores [list ${project_root}/source/rtl/common             \
+                        ${project_root}/subsystems/codec_unit         \
+                        ${project_root}/subsystems/sampler_dma_unit   \
+                        ${project_root}/subsystems/sampler_mixer_unit \
                         ]
 
 ## Project integration script
