Move integ scripts from source to cfg

--- a/cfg/zybo_sampler.cfg
+++ b/cfg/zybo_sampler.cfg
@@ -5,6 +5,10 @@
 set project_name  "zybo_sampler"
 set project_root [pwd]
 
+#####################
+## Ingredients
+#####################
+
 ## Project cores to be packaged
 set project_cores [list ${project_root}/source/rtl/common             \
                         ${project_root}/subsystems/codec_unit         \
@@ -13,10 +17,25 @@ set project_cores [list ${project_root}/source/rtl/common             \
                         ]
 
 ## Project integration script
-set project_integ_script ${project_root}/source/integ/zybo_sampler_integ.tcl
+set project_integ_script ${project_root}/cfg/zybo_sampler_integ/zybo_sampler_integ.tcl
 
 ## User interface definitions
 set user_interfaces_dir ${project_root}/board_files/interfaces
+
+## Constraints
+# Read right before synthesis starts
+set constraints_synth ${project_root}/source/constraints/timing_constraints.xdc
+# Read right before place and route starts
+set constraints_par   [list \
+                        ${project_root}/source/constraints/pin_assignment.xdc \
+                        ${project_root}/source/constraints/physical_constraints.xdc \
+                      ]
+
+#####################
+## Build Variables
+#####################
+## Target directory
+set results_dirname "results"
 
 ## Project integration variables
 set integ_project_name   "zybo_sampler_integ"
@@ -27,13 +46,4 @@ set gen_xilinx_ip_tcl_dirname "xilinx_ip_tcl"
 set gen_xilinx_ip_xci_dirname "xilinx_ip_xci"
 
 ## Vitis workspace
-set workspace_project_name     ${project_name}_vitis_ws
-
-## Constraints
-# Read right before synthesis starts
-set constraints_synth ${project_root}/source/constraints/timing_constraints.xdc
-# Read right before place and route starts
-set constraints_par   [list \
-                        ${project_root}/source/constraints/pin_assignment.xdc \
-                        ${project_root}/source/constraints/physical_constraints.xdc \
-                      ]
+set workspace_project_name    "${project_name}_vitis_ws"
