Moved common RTL to source/common

--- a/cfg/zybo_sampler.cfg
+++ b/cfg/zybo_sampler.cfg
@@ -10,7 +10,7 @@ set project_root [pwd]
 #####################
 
 ## Project cores to be packaged
-set project_cores [list ${project_root}/source/rtl/common             \
+set project_cores [list ${project_root}/source/common                 \
                         ${project_root}/subsystems/codec_unit         \
                         ${project_root}/subsystems/sampler_dma_unit   \
                         ${project_root}/subsystems/sampler_mixer_unit \
