--- a/subsystems/codec_unit/cfg/core.cfg
+++ b/subsystems/codec_unit/cfg/core.cfg
@@ -4,3 +4,4 @@ set core_filelist               "${core_root}/cfg/rtl_file_list.f"
 set core_xilinx_ip_tcl_filelist "${core_root}/cfg/xilinx_ip_tcl_file_list.f"
 set core_fw_incdirs             "${core_root}/cfg/fw_incdirs.f"
 set core_pack_script            "${core_root}/cfg/pack/pack_core.tcl"
+set core_registers              "${core_root}/reg/reg_assemble.tcl"
