Added UVM Register Model generation script

--- a/cfg/zybo_sampler.cfg
+++ b/cfg/zybo_sampler.cfg
@@ -31,6 +31,9 @@ set constraints_par   [list \
                         ${project_root}/source/constraints/physical_constraints.xdc \
                       ]
 
+## Register map
+set project_regmap ${project_root}/source/common/reg/zybo_sampler_regmap.tcl
+
 #####################
 ## Build Variables
 #####################
