--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "*.xdc": "tcl",
     "*.cfg": "tcl",
     "*.svh": "systemverilog",
+    ".jou":  "tcl",
     "atomic": "c",
     "cstdint": "c"
   }
