Update vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     "*.cfg": "tcl",
     "*.svh": "systemverilog",
     ".jou":  "tcl",
+    ".json": "jsonc",
     "atomic": "c",
     "cstdint": "c"
   }
