--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,7 @@
     ".json": "jsonc",
     "atomic": "c",
     "cstdint": "c"
-  }
+  },
+  "editor.tabSize": 2,
+  "editor.insertSpaces": true
 }
