Changed vivado log output

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,10 +3,12 @@
     "*.xdc": "tcl",
     "*.cfg": "tcl",
     "*.svh": "systemverilog",
-    ".jou":  "tcl",
+    ".jou": "tcl",
     ".json": "jsonc",
     "atomic": "c",
-    "cstdint": "c"
+    "cstdint": "c",
+    "freertos_cli.h": "c",
+    "serial_driver.h": "c"
   },
   "editor.tabSize": 2,
   "editor.insertSpaces": true,
